# foodie-hotspot-recommendation-service

./: .gitignore  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  init.sql  pyproject.toml  pytest.ini  redis.conf  requirements.txt
accounts/: __init__.py  apps.py  models.py  schedulers.py  tasks.py  test_user_update.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_location_options.py
auths/: __init__.py  tests.py  urls.py  views.py
config/: __init__.py  celery.py  settings.py  wsgi.py
foodiehotspots/: __init__.py  apps.py  models.py  operator.py  scheduler.py  serializers.py  tasks.py  urls.py  views.py
foodiehotspots/migrations/: 0001_initial.py  0003_alter_rate_restaurant_alter_rate_user.py  0004_rename_score_restaurant_average_score.py
foodiehotspots/tests/: test_restaurant_detail.py
tests/: conftest.py  test_views.py
tests/test_accounts/: test_accounts_api.py  test_location_list.py  test_user_detail.py  test_user_update.py
tests/test_auths/: test_user_auth.py
tests/test_foodiehotspots/: test_foodiehotspots_api.py  test_restaurant_detail.py  test_restaurant_evaluation.py  test_restaurant_list.py
utils/: get_data.py  restaurant_test_data.csv
