[tool.poetry]
name = "foodie-hotspot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.6"
django-environ = "^0.11.2"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.0"
pyjwt = "^2.8.0"
django-cors-headers = "^4.3.0"
pillow = "^10.1.0"
drf-yasg = "^1.21.7"
gunicorn = "^21.2.0"
pymysql = "^1.1.0"
xmltodict = "^0.13.0"
apscheduler = "^3.10.4"
django-apscheduler = "^0.6.2"
mysql = "^0.0.3"
django-redis = "^5.4.0"
pytest = "^7.4.3"
pytest-django = "^4.7.0"
locust = "^2.19.0"
mixer = "^7.2.2"
flower = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = "tests.py *_test.py test_*.py"
#addopts = "--reuse-db"

log_cli="true"
log_cli_level="DEBUG"
log_cli_date_format="%Y-%m-%d %H:%M:%S"
log_cli_format="%(levelname)-8s %(asctime)s %(name)s::%(filename)s:%(lineno)d: %(message)s"